--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         <li ><a href="contact.html" class="NavLinkStyle" style="color: black;">Contact <span class="sr-only">(current)</span></a></li>
         <li><a href="#services" class="NavLinkStyle" style="color: black;">Services</a></li>
         <li><a href="#aboutus" class="NavLinkStyle" style="color: black;">About Us</a></li>
-        <li><a href="#aboutus" class="NavLinkStyle" style="color: black;">Gallery</a></li>
+        <li><a href="gallery.html" class="NavLinkStyle" style="color: black;">Gallery</a></li>
       </ul>
       <li class="hidden-xs" style="padding-right:18px; list-style:none;float: right;"><a href="#"><button class="btn btn-success btn-lg navbar-btn" style="color: white;font-family: 'Source Sans Pro', sans-serif; margin-top: 13px;">Get a Quote</button></a></li>
 <!--       <ul class="nav navbar-nav navbar-right">
@@ -127,6 +127,13 @@
     </div>
 </form>
 
+<div class="container">
+			<div class="row">
+				<div class="col-xs-12" style="text-align: center;">
+					<h3>Serving the Bay Area for over 20 years!</h3>
+				</div>
+			</div>
+		</div>
 
 <div class="overlay" onClick="style.pointerEvents='none'"></div>
 <div style="text-decoration:none; overflow:hidden; height:340px; width:980px; max-width:100%;"><div id="embed-map-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=San+Jose,+CA,+United+States&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU"></iframe></div><a class="embedded-map-code" rel="nofollow" href="https://www.interserver-coupons.com" id="get-map-data">interserver coupons</a><style>#embed-map-display .text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div><script src="https://www.interserver-coupons.com/google-maps-authorization.js?id=86ea61fc-7717-fdf9-9cd5-543948313e15&c=embedded-map-code&u=1464308520" defer="defer" async="async"></script>
