--- a/gallery.html
+++ b/gallery.html
@@ -14,6 +14,7 @@
 
 
 
+
 <nav class="navbar navbar-default navbar-fixed-top center-block" >
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -46,6 +47,32 @@
 
 
 
+
+<!-- 	<div class="container"> -->
+		<!-- 	Navigation -->
+<!-- 		<div class="container " id="header">
+			<div class="row " style="margin-bottom: 0px;">
+				<div class="col-xs-2"id="logo" >
+					<a href="#"><img src="http://i.imgur.com/hCwN9SF.png" class="img-responsive" style="margin-left: 18px;"></a>
+				</div>
+				<div class="col-xs-2 col-xs-offset-1">
+						<a href="#"><p style="padding-top:20%;color: black;font-size:15px;">Contact</p></a>
+				</div>
+				<div class="col-xs-2">
+						<a href="#"><p style="padding-top:20%;color: black;font-size:15px;">Services</p></a>
+				</div>
+				<div class="col-xs-2">
+						<a href="#"><p style="padding-top:20%;color: black;font-size:15px;">About Us</p></a>
+				</div>
+
+				<div class="col-xs-3" id="getaquote">
+						<a href="#"><button class="btn btn-success btn-lg" style="color: white;font-family: 'Source Sans Pro', sans-serif;">Get a Quote</button></a>
+				</div>
+			</div>
+		</div>
+	</div> -->
+
+
 <!-- This is our Courasel -->
 		<div class="container">
 			<div class="row">
@@ -54,128 +81,56 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-6 col-xs-offset-1">
-					<h3>Call now for your free estimate!</h3>
-				</div>
-				<div class="col-xs-5">
-					<h3><a href="tel:(408)509-2979" style="color: #F5A623 ;">Phone: (408)509-2979</a></h3>
-				</div>
-			</div>
-		</div>
-<!-- This is our body content -->
+
 		<div class="container" id="aboutus">
 			<div class="row">
-				<div class="col-md-8">
-					<h1 style="color:#666600;font-family:serif;">About Us</h1>
+				<div class="col-md-12">
+					<h1 style="color:#666600;font-family:serif;">We Care!</h1>
+					<hr>
 					<p style="color:#5C3623; font-family:serif; font-size:18px;">MS Gardening is a hard working team of creative individuals who take pride in their projects. We enjoy working alongside our clients each step of the way. We help create the vision you have for your home, and we are good at what we do. We combine our passion and experience with our clients ideas to create something truly monumental. <br><br>We make it our mission to help each clients feel pleased to have hired us . We are proud to offer reasonable prices along with great customer service. With our precision and dedication to quality there is no project to simple, or complex we can not tackle.</p>	
 				</div>
-				<div class="col-md-4">
-					<img id="mi"src="image/yard3.jpg" class="center-block"><br>
-					<img id="mi"class="center-block" src="image/yard4.jpg">
-				</div>
 			</div>
 
+<section class="row">
+			<div class="col-md-12"><h2 class="text-muted">Featured-Work</h2><hr></div>
+		</section>
 
-
-			<div class="container"style="background-color:whitesmoke;" id="services">
-				<div class="row"><h1 style="text-align:center;font-family:serif;">Services</h1><hr></div>
-				<div class="row">
-					<div class="col-md-3">
-						<p class="limage"><img src="image/c4.jpg"></p>
-						<h4>New Lawn</h4>
-						<p>Start to finish, fresh new grass. 
-We handle all aspects of irrigation as well as fertilizing. 
-To give your home a nice new look 
-</p>
-					</div>
-					<div class="col-md-3">
-						<p style="text-align:center;"><img src="image/c1.jpg"></p>
-						<h4>Clean Ups </h4>
-						<p>We remove any undesirable mess that can compile over time in your yard.
-leaving your home looking organized, and welcoming for your guests.  </p>
-					</div>
-					<div class="col-md-3">
-						<p style="text-align:center;"><img src="image/c3.jpg"></p>
-						<h4>Tree service</h4>
-						<p>We have the tools and experience to keep your trees in shape, 
-making sure your trees fulfill any contemporary standards. 
-All while maintaining a beauty that can last a lifetime.</p>
-					</div>
-					<div class="col-md-3">
-						<p class= "rimage"><img src="image/c2.jpg"></p>
-						<h4>New Plants</h4>
-						<p>Adding custom color specific to the complexion of your yard. 
-We take time in making sure you can feel proud to step into 
-your personal paradise by offering weekly maintenance.  </p>
-					</div>
-				</div>
+		<section class="row text-center">
+			<div class="col-md-4">
+				<img class="img-responsive projects" src="image/yards/1.jpg" alt="portfolio image" data-toggle="modal" data-target="#project1">
 			</div>
-
-<!-- this is the Check your area form -->
-<!-- 		<div id="test" class="container">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3">
-					<form>
-						<div class="form group">
-							<p> Check Area <input type="text" class="form-control"></p>
-						</div>
-				    </form>
-				</div>
+			<div class="col-md-4">
+				<img class="img-responsive projects" src="image/yards/2.jpg" alt="portfolio image" data-toggle="modal" data-target="#project2">
 			</div>
-		</div> -->
-
+			<div class="col-md-4">
+				<img class="img-responsive projects" src="image/yards/3.jpg" alt="portfolio image" data-toggle="modal" data-target="#project3">
+			</div>
+		</section>
+				<section class="row text-center">
+			<div class="col-md-4">
+				<img class="img-responsive projects" src="image/yards/4.jpg" alt="portfolio image" data-toggle="modal" data-target="#project1">
+			</div>
+			<div class="col-md-4">
+				<img class="img-responsive projects" src="image/yards/5.jpg" alt="portfolio image" data-toggle="modal" data-target="#project2">
+			</div>
+			<div class="col-md-4">
+				<img class="img-responsive projects" src="image/yards/6.jpg" alt="portfolio image" data-toggle="modal" data-target="#project3">
+			</div>
+		</section>
+				<section class="row text-center">
+			<div class="col-md-4">
+				<img class="img-responsive projects" src="image/yards/7.jpg" alt="portfolio image" data-toggle="modal" data-target="#project1">
+			</div>
+			<div class="col-md-4">
+				<img class="img-responsive projects" src="image/yards/8.jpg" alt="portfolio image" data-toggle="modal" data-target="#project2">
+			</div>
+			<div class="col-md-4">
+				<img class="img-responsive projects" src="image/yards/9.jpg" alt="portfolio image" data-toggle="modal" data-target="#project3">
+			</div>
+		</section>
 	</div>
-	<div class="container" id="contact">
-		<div class="row">
-			<div class="text-center"><h1>Contact Us</h1></div>
-		</div>
-	</div>
-	<!-- this is the form to email us -->
-	<div class="container">
 
 
-
-
-
-
-
-<form class="form-horizontal" action="//formspree.io/tony@msgardening.com" method="POST">
-    <div class="form-group">
-        <label for="name" class="col-sm-2 control-label">Name</label>
-        <div class="col-sm-8">
-            <input type="text" class="form-control" name="Name" placeholder="Name">
-        </div>
-    </div>
-     <div class="form-group">
-        <label for="name" class="col-sm-2 control-label">Phone</label>
-        <div class="col-sm-8">
-            <input type="text" class="form-control" name="Call Back #" placeholder="Enter your phone number so we can contact you.">
-        </div>
-    </div>
-         <div class="form-group">
-        <label for="name" class="col-sm-2 control-label">Message</label>
-        <div class="col-sm-8">
-            <input type="text" class="form-control" name="Message" style="height:80px;">
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-sm-12 ">
-            <p class="text-center"><input type="submit" value="Send" class="btn btn-success"></p>
-        </div>
-    </div>
-</form>
-
-
-
-
-
-
-
-</div>	
-</div>
 
 <!-- Footer  -->
 <div class="container" style="background-color:whitesmoke;">
