--- a/gallery.html
+++ b/gallery.html
@@ -97,35 +97,35 @@
 
 		<section class="row text-center">
 			<div class="col-md-4">
-				<img class="img-responsive projects" src="image/yards/1.jpg" alt="portfolio image" data-toggle="modal" data-target="#project1">
+				<img class="img-responsive projects" src="image/1.jpg" alt="portfolio image" data-toggle="modal" data-target="#project1">
 			</div>
 			<div class="col-md-4">
-				<img class="img-responsive projects" src="image/yards/2.jpg" alt="portfolio image" data-toggle="modal" data-target="#project2">
+				<img class="img-responsive projects" src="image/2.jpg" alt="portfolio image" data-toggle="modal" data-target="#project2">
 			</div>
 			<div class="col-md-4">
-				<img class="img-responsive projects" src="image/yards/3.jpg" alt="portfolio image" data-toggle="modal" data-target="#project3">
-			</div>
-		</section>
-				<section class="row text-center">
-			<div class="col-md-4">
-				<img class="img-responsive projects" src="image/yards/4.jpg" alt="portfolio image" data-toggle="modal" data-target="#project1">
-			</div>
-			<div class="col-md-4">
-				<img class="img-responsive projects" src="image/yards/5.jpg" alt="portfolio image" data-toggle="modal" data-target="#project2">
-			</div>
-			<div class="col-md-4">
-				<img class="img-responsive projects" src="image/yards/6.jpg" alt="portfolio image" data-toggle="modal" data-target="#project3">
+				<img class="img-responsive projects" src="image/3.jpg" alt="portfolio image" data-toggle="modal" data-target="#project3">
 			</div>
 		</section>
 				<section class="row text-center">
 			<div class="col-md-4">
-				<img class="img-responsive projects" src="image/yards/7.jpg" alt="portfolio image" data-toggle="modal" data-target="#project1">
+				<img class="img-responsive projects" src="image/4.jpg" alt="portfolio image" data-toggle="modal" data-target="#project1">
 			</div>
 			<div class="col-md-4">
-				<img class="img-responsive projects" src="image/yards/8.jpg" alt="portfolio image" data-toggle="modal" data-target="#project2">
+				<img class="img-responsive projects" src="image/5.jpg" alt="portfolio image" data-toggle="modal" data-target="#project2">
 			</div>
 			<div class="col-md-4">
-				<img class="img-responsive projects" src="image/yards/9.jpg" alt="portfolio image" data-toggle="modal" data-target="#project3">
+				<img class="img-responsive projects" src="image/6.jpg" alt="portfolio image" data-toggle="modal" data-target="#project3">
+			</div>
+		</section>
+				<section class="row text-center">
+			<div class="col-md-4">
+				<img class="img-responsive projects" src="image/7.jpg" alt="portfolio image" data-toggle="modal" data-target="#project1">
+			</div>
+			<div class="col-md-4">
+				<img class="img-responsive projects" src="image/8.jpg" alt="portfolio image" data-toggle="modal" data-target="#project2">
+			</div>
+			<div class="col-md-4">
+				<img class="img-responsive projects" src="image/9.jpg" alt="portfolio image" data-toggle="modal" data-target="#project3">
 			</div>
 		</section>
 	</div>
