--- a/gallery.html
+++ b/gallery.html
@@ -103,7 +103,7 @@
 				<img class="img-responsive projects" src="image/2.jpg" alt="portfolio image" data-toggle="modal" data-target="#project2">
 			</div>
 			<div class="col-md-4">
-				<img class="img-responsive projects" src="image/3.jpg" alt="portfolio image" data-toggle="modal" data-target="#project3">
+				<img class="img-responsive projects" src="image/3.jpg" alt="portfolio image">
 			</div>
 		</section>
 				<section class="row text-center">
