--- a/gallery.html
+++ b/gallery.html
@@ -97,7 +97,7 @@
 
 		<section class="row text-center">
 			<div class="col-md-4">
-				<img class="img-responsive projects" src="image/yardimage.jpg" alt="portfolio image" data-toggle="modal" data-target="#project1">
+				<img class="img-responsive projects" src="image/yardimage.jpg" alt="portfolio image">
 			</div>
 			<div class="col-md-4">
 				<img class="img-responsive projects" src="image/2.jpg" alt="portfolio image" data-toggle="modal" data-target="#project2">
